[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"   # 错误处理
axum = "0.6.20"     # web 服务器
base64 = "0.21.4"   # base64 编码/解码
bytes = "1.5.0"     # 处理字节流
image = "0.24.7"    # 处理图像
lazy_static = "1.4.0"   # 通过宏更方便地初始化静态变量
lru = "0.12.0"  # lru缓存 
percent-encoding = "2.3.0"  # url编码/解码
photon-rs = "0.3.2"     # 图像效果
prost = "0.12.1"    # protobuf
reqwest = "0.11.22"     # 网络请求
serde = { version = "1.0.188", features = ["derive"] }  # 序列化/反序列化数据
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }    # 服务处理及中间件
tower-http = { version = "0.4.4", features = ["add-extension", "compression-full", "trace"] }   # http中间件
tracing = "0.1.37"  # 日志和追踪
tracing-subscriber = "0.3.17"   #日志和追踪


[build-dependencies]
prost-build = "0.12.1"